# cloud-storage-player

./: .gitignore  AGENTS.md  PLAN.md  Problem.md  README.md  package-lock.json  package.json  pyproject.toml
docs/: README.md  baidu-openapi-integration.md  database-schema.md  frontend-vue-architecture.md  http-api.md  import-and-media-probe.md  runtime-and-configuration.md  separated-architecture.md  storage-backend-and-remote-fallback.md  technical-overview.md  testing-and-sample-data.md
frontend/: AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.ts  main.tsx  styles.css
frontend/src/api/: auth.ts  client.ts  http.ts  imports.ts  library.ts  settings.ts
frontend/src/components/: AppShell.vue  BannerCarousel.tsx  CoverCard.tsx  EditableTagList.tsx  ImportJobCard.vue  Layout.tsx  Surface.tsx  TagChip.tsx  TagChipList.vue  VideoCard.vue  VideoGridCard.tsx
frontend/src/hooks/: session.ts
frontend/src/pages/: LibraryPage.tsx  LoginPage.tsx  ManagementPage.tsx  PlayerPage.tsx  RecommendationPage.tsx  (+2 more)
scripts/: backend-dev.mjs  build-csp.mjs  csp-dev.mjs
src/: AGENTS.md
src/app/: __init__.py  main.py
tests/: test_admin_settings_api.py  test_auth_api.py  test_auth_flow.py  test_baidu_api_retry.py  test_baidu_oauth.py  test_baidu_smoke.py  test_baidu_storage.py  test_cache_api.py  test_cache_eviction.py  test_cache_transfer_concurrency_benchmark.py  test_cache_transfers.py  test_catalog_api.py  test_catalog_sync.py  test_catalog_sync_api.py  test_chunker.py  test_cover_artwork.py  test_crypto.py  test_db_connection.py  test_import_api.py  test_import_job_control.py  test_import_job_transfer_speed.py  test_import_remote_transfer.py  test_import_upload_integrity.py  test_manifest_metadata_encryption.py  test_pages_spa_routes.py  test_range_map.py  test_runtime_control_and_archive.py  test_security.py  test_segment_local_paths.py  test_segment_prefetch.py  test_settings_api.py  test_storage_mock.py  test_stream_api.py  test_streaming_remote_payload.py  test_video_segments.py
(+104 files in other folders)
