[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-storage-player"
version = "0.1.0"
description = "Windows-first LAN video service backed by Baidu Netdisk"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0,<46.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "itsdangerous>=2.2,<3.0",
    "jinja2>=3.1,<4.0",
    "pydantic-settings>=2.8,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "uvicorn>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",
    "pyinstaller>=6.16,<7.0",
    "pytest>=8.3,<9.0",
]

[project.scripts]
cloud-storage-player = "app.main:main"
cloud-storage-player-start-server = "app.main:main"
cloud-storage-player-baidu-smoke = "app.cli.baidu_smoke:main"
cloud-storage-player-rebuild-posters = "app.cli.poster_rebuild:main"
cloud-storage-player-start = "app.cli.runtime_start:main"
cloud-storage-player-stop = "app.cli.runtime_stop:main"
cloud-storage-player-save-data = "app.cli.save_data:main"
cloud-storage-player-load-data = "app.cli.load_data:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
